# geo_framework

./: .clang-format  CMakeLists.txt
acc/: CMakeLists.txt
acc/include/acc/: BVHNode.hpp  BoundingBox.hpp  DynamicBVH.hpp  KDTree.hpp  Ray.hpp  TriUtils.hpp
cmake/: Config.cmake.in
examples/: BasicViewer.cpp  CMakeLists.txt  HeatGeodesicDistance.cpp  IntrinsicVertexGradient.cpp  LargestComponent.cpp  MidpointSubdivision.cpp  Seg2SDF.cpp  SubMesh.cpp  TraceZeroLevelSet.cpp
field/: CMakeLists.txt
field/include/geo/field/: ComputeHeatGeodesicDistance.h  ConnectionLaplacian.h  CotanLaplacian.h  CotanVectors.h  Divergence.h  FaceMetric.h  Gradient.h  HeatGeodesicDistance.h  PointEmbedding.h  Seg2SDF.h  TraceZeroLevelSet.h  VertexFaceConnectionAngle.h
field/src/: ComputeHeatGeodesicDistance.cpp  CotanVectors.cpp  Divergence.cpp  FaceMetric.cpp  Gradient.cpp  HeatGeodesicDistance.cpp  Seg2SDF.cpp  TraceZeroLevelSet.cpp  VertexFaceConnectionAngle.cpp
io/: CMakeLists.txt
io/include/geo/io/: IO.h
io/src/: LoadMeshFromFile.cpp  LoadMeshFromObj.cpp  LoadMeshFromVtk.cpp  LoadMeshVertexScalarFieldFromVtk.cpp  LoadVerticesFromObj.cpp  WriteCurveToVtk.cpp  WriteMeshFaceScalarFieldToVtk.cpp  WriteMeshFaceVectorFieldToVtk.cpp  WriteMeshToFile.cpp  WriteMeshToObj.cpp  WriteMeshToVtk.cpp  WriteMeshVertexScalarFieldToVtk.cpp  WriteMeshVertexVectorFieldToVtk.cpp  WriteVerticesScalarFieldToVtk.cpp  WriteVerticesToVtk.cpp
mesh/: CMakeLists.txt
mesh/include/geo/mesh/: Components.h  Curve.h  CutEdge.h  DihedralAngles.h  EdgeFaceAdjacency.h  Face.h  FloodFill.h  HalfEdge.h  IndexBasedHalfEdge.h  Mesh.h  PairHash.h  SubMesh.h  Subdivision.h  Vertex.h
mesh/src/: Components.cpp  ComputeConnectionAngles.cpp  ComputeFaceAngles.cpp  ComputeFaceAreas.cpp  ComputeFaceNormals.cpp  ComputeMeanEdgeLength.cpp  ComputeVertexAngleSums.cpp  ComputeVertexAreas.cpp  ComputeVertexNormals.cpp  ConstructHalfEdge.cpp  CutEdge.cpp  DihedralAngles.cpp  FloodFill.cpp  GetEdgeLengthMatrix.cpp  GetFaceIndicesMatrix.cpp  GetPositionMatrix.cpp  GetVertexMassVector.cpp  GetVertexNRing.cpp  GetVertexNormalMatrix.cpp  GetVertexOneRing.cpp  GetVertexOneRingMap.cpp  GetVertexPositionMatrix.cpp  HalfEdge.cpp  IndexBasedHalfEdge.cpp  MeshRequire.cpp  SetFaceIndices.cpp  SetVertexIndices.cpp  SubMesh.cpp  Subdivision.cpp  Vertex.cpp
numeric/: CMakeLists.txt
numeric/include/geo/numeric/: InversePowerIteration.h  SparseSymmetricInverseSolver.h  nsqp.h
test/: CMakeLists.txt  testConnectionLaplacian.cpp  testCotanLaplacian.cpp  testDivergence.cpp  testGradient.cpp  testHeatGeodesic.cpp  testSeg2SDF.cpp
viewer/: CMakeLists.txt
viewer/include/geo/viewer/: Camera.h  Viewer.h
viewer/src/: Camera.cpp  Viewer.cpp
